Секретные фалы пользователя 414

--- a/Platform.csproj
+++ b/Platform.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <UserSecretsId>04ac1805-fd17-43cc-8c7c-aa75200f3e16</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
